--- a/.github/workflows/autoupdate.yml
+++ b/.github/workflows/autoupdate.yml
@@ -14,6 +14,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         repository: "CodeDownIO/registry2nix"
+        ref: "94b3406e58fb08864d6fab521e808968e184544b"
 
     - uses: cachix/install-nix-action@v20
       with:
