--- a/.github/workflows/autoupdate.yml
+++ b/.github/workflows/autoupdate.yml
@@ -61,6 +61,8 @@ jobs:
       run: |
         cp CodeDownIOGeneral/failures.yml JuliaRegistriesGeneral/failures.yml
 
+        set +e
+
         registry2nix-exe \
           --print-failures \
           --repo JuliaRegistriesGeneral \
