Clear failures and regen

--- a/C/Compiler/Versions.toml
+++ b/C/Compiler/Versions.toml
@@ -1,5 +1,8 @@
+
 ["0.1.0"]
-git-tree-sha1 = "f251406f8c327e9dbb4fdb4108c8f5f7b033dd7e"
+  git-tree-sha1 = "f251406f8c327e9dbb4fdb4108c8f5f7b033dd7e"
+  nix-sha256 = "0cqh10gd07wmpiff0ggl8nr023xdhfrqqjaz6qwmy4d9s58akhjb"
 
 ["0.1.1"]
-git-tree-sha1 = "382d79bfe72a406294faca39ef0c3cef6e6ce1f1"
+  git-tree-sha1 = "382d79bfe72a406294faca39ef0c3cef6e6ce1f1"
+  nix-sha256 = "1p71idlrn68nbxlxa550lrppplplvn2261gayp6r0vqnkicrv2gv"
