--- a/F/Forem/Versions.toml
+++ b/F/Forem/Versions.toml
@@ -1,2 +1,4 @@
+
 ["0.1.0"]
-git-tree-sha1 = "3810b6e845a0dd4fc28a225c78fa366644792f2e"
+  git-tree-sha1 = "3810b6e845a0dd4fc28a225c78fa366644792f2e"
+  nix-sha256 = "06ayd4y1ms6fv652ndkq83v8pzbkwac6qhlwff7v4xxd5n60j25x"
