--- a/F/FreydCategoriesForCAP/Versions.toml
+++ b/F/FreydCategoriesForCAP/Versions.toml
@@ -1,29 +1,40 @@
+
 ["0.1.0"]
-git-tree-sha1 = "d1939ca835bdaa42b55bab261c039127f34da0fe"
+  git-tree-sha1 = "d1939ca835bdaa42b55bab261c039127f34da0fe"
+  nix-sha256 = "0d96qyn5kypf1q8lqr6pcwhdij0fz481sv86fg7n3gqzdzap34h6"
 
 ["0.1.1"]
-git-tree-sha1 = "25be9fa45332ac67bd094c68b6e3e13faeae3549"
+  git-tree-sha1 = "25be9fa45332ac67bd094c68b6e3e13faeae3549"
+  nix-sha256 = "0il4wc35vp5894y8zgpkyipgag1jlgvpw4b58gwr113b3cwpywf1"
 
 ["0.1.2"]
-git-tree-sha1 = "321e9331f51f825811ad8e64739a4891dae9098d"
+  git-tree-sha1 = "321e9331f51f825811ad8e64739a4891dae9098d"
+  nix-sha256 = "1039my8kqqa054cqbhw290sfjs1c19wxf3hpxv5jqhphvc1ff73s"
 
 ["0.1.3"]
-git-tree-sha1 = "ba2fab8fb49bc62ed9223dc2839979091a9e9c10"
+  git-tree-sha1 = "ba2fab8fb49bc62ed9223dc2839979091a9e9c10"
+  nix-sha256 = "00fz5gr3nlrfrz4v2yhid4sphqrbgk0qgv4f817pxhnxmki779kx"
 
 ["0.1.4"]
-git-tree-sha1 = "a6a1976f8beeb20b697e766f82df46fc7a074e25"
+  git-tree-sha1 = "a6a1976f8beeb20b697e766f82df46fc7a074e25"
+  nix-sha256 = "0v67mk8pnpv8zkb6wy9c05fambd5vsnb2v81f5yzs105kbpn03sp"
 
 ["0.1.5"]
-git-tree-sha1 = "6af28c2ba18b91fe43d5e9e12bbdfc064be1ff57"
+  git-tree-sha1 = "6af28c2ba18b91fe43d5e9e12bbdfc064be1ff57"
+  nix-sha256 = "1ka8blarm310lq622vs6rmb8k8wvh9nd97p0jnrb1804v7r5libd"
 
 ["0.1.6"]
-git-tree-sha1 = "d89b9eac845bbde9bfc2d468b3696b2c55cac9fd"
+  git-tree-sha1 = "d89b9eac845bbde9bfc2d468b3696b2c55cac9fd"
+  nix-sha256 = "0x0iamy9nf3y80aflz63npkzilwj3cwdkl9vic986rnpdpmh0pjc"
 
 ["0.1.7"]
-git-tree-sha1 = "d20c3543ad83103e627ad2bc802241fd03fba3d7"
+  git-tree-sha1 = "d20c3543ad83103e627ad2bc802241fd03fba3d7"
+  nix-sha256 = "0kayyx5azdxjm42kbcjwjj7j9dpz728alvw87xg7jf1az5wyrn9g"
 
 ["0.1.8"]
-git-tree-sha1 = "b74193163a26ed99d2bcf07338a4b050da30749b"
+  git-tree-sha1 = "b74193163a26ed99d2bcf07338a4b050da30749b"
+  nix-sha256 = "0hdss5zvkw253fy96rbb21avm5s9bdir6638s0qs7kb5bc0ic7w1"
 
 ["0.1.9"]
-git-tree-sha1 = "15d0fe4386dad12466c6ce21138d79deb34ac94f"
+  git-tree-sha1 = "15d0fe4386dad12466c6ce21138d79deb34ac94f"
+  nix-sha256 = "1k6cy8cibhzcpr7861chjvrnk29n6za3895qirzizwdbzd0rs6jp"
