--- a/T/TheMovieDB/Versions.toml
+++ b/T/TheMovieDB/Versions.toml
@@ -1,2 +1,4 @@
+
 ["0.1.0"]
-git-tree-sha1 = "65803e4fe426b2d541040d7ef5b464c39cdf24c4"
+  git-tree-sha1 = "65803e4fe426b2d541040d7ef5b464c39cdf24c4"
+  nix-sha256 = "0kdd4q9zdrgww1kd9dpqk3njab5py3417xnw67h8x0ysv5ffqp80"
